Changes for 1.0.0

 - [ZBX-809] fixed memory leak while processing proc.num metric under Win2008 (Sasha)
 - [NTD-80] changed the minimal maintenance time from 1 hour to 5 minutes (Sasha)
 - [NTD-77] added availability to add several links between map elements (Artem)
 - [NTD-78] changed the number of problems shown in maps at state "No False For B" (Artem)
 - [ZBX-792] fixed server memory leak in processing remote commands in actions (Dmitry)
 - [NTD-89] increased graphs max skip cell and max skip delay values (Artem)
 - [NTD-87] fixed compilation problems under AIX (Sasha)
 - [NTD-47] added support of system.cpu.intr/switches under FreeBSD (Sasha)
 - [NTP-6] fixed duplicate id's in processing of log and text items (Sasha)
 - [NTD-54] added support of vfs.dev.read/write under FreeBSD (Sasha)
 - [NTD-86] fixed configuration scripts (Sasha)
 - [NTP-6] improved performance of processing of log and text items (Sasha)
 - [NTD-75] added support of <mode> for system.cpu.util under Solaris (Sasha)
 - [NTD-75] fixed processing of system.cpu.util under Solaris (Sasha)
 - [NTP-5] allowed multibyte chars in web scenarios (Artem)
 - [NTD-79] updated list of supported items in item configuration form (Sasha)
 - [NTD-76] fixed incorrect processing of net.tcp.listen (Sasha)
 - [NTD-73] fixed problem with "Too many open files" by agent under Solaris 2.5, 2.6 (Sasha)
 - [NTD-82] size of the box for element label in maps is increased (Artem)
 - [NTD-78] fixed number of problems for "No false for B" on maps (Artem)
 - [NTD-81] added rule to prioritize deny rule (Artem)
 - [NTD-68] fixed possible agent crash when processing eventlog[] (Sasha)
 - [ZBX-615] fixed processing of four-character-long item keys (Dmitry)
 - [NTD-67] added timeout handler for server incoming connections (Sasha)
 - [NTD-65] improved graph min,max item exporting (Artem)
 - [NTD-38] added limit of 500 lines per events log (Artem)
 - [NTD-64] fixed query error on events screen (Artem)